more z-index fixes

--- a/src/assets/menu-button/menu-button.css
+++ b/src/assets/menu-button/menu-button.css
@@ -5,7 +5,7 @@
   top: 3vh;
   right: 0;
   margin: 12vh 10vw 5vh 10vw;
-  z-index: 6;
+  z-index: 2;
 }
 
 .menu-container .spin-to {
